# 0VoiceAVLearning

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  pull_dependency.ps1  pull_dependency.sh
cmake/: VoiceAVHelpers.cmake
docs/: README.md  ffmpeg-dependency.md
voice_av/: README.md
voice_av/08-ffmpeg-demuxing-and-decoding/05-decode-audio/: main.c
voice_av/08-ffmpeg-demuxing-and-decoding/06-decode-video/: main.c
