cmake_minimum_required(VERSION 3.22)

project(VoiceAVLearning VERSION 0.1.0 LANGUAGES C CXX)

if(MSVC)
    set(CMAKE_MSVC_OUTPUT_ENCODING "UTF-8")
    set(CMAKE_UTF8_CODEPAGE ON)
endif()

set(VOICE_AV_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}")
set(VOICE_AV_EXAMPLES_DIR "${VOICE_AV_SOURCE_DIR}/voice_av")
if(CMAKE_TOOLCHAIN_FILE)
    get_filename_component(VOICE_AV_CONAN_GENERATORS_DIR "${CMAKE_TOOLCHAIN_FILE}" DIRECTORY)
else()
    set(VOICE_AV_CONAN_GENERATORS_DIR "${VOICE_AV_SOURCE_DIR}/build/generators")
endif()
set(VOICE_AV_RUNTIME_OUTPUT_DIR "${CMAKE_BINARY_DIR}/$<CONFIG>")

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(
    VOICE_AV_USE_RELEASE_CONAN_DEPS
    "Use Release Conan packages when building non-Release multi-config CMake configs"
    ON
)
option(
    VOICE_AV_WARNINGS_AS_ERRORS
    "Treat compiler warnings as errors"
    OFF
)

set(VOICE_AV_FFMPEG_DEBUG_CONFIG
    "${VOICE_AV_CONAN_GENERATORS_DIR}/ffmpeg-Target-debug.cmake"
)
set(VOICE_AV_FFMPEG_RELEASE_CONFIG
    "${VOICE_AV_CONAN_GENERATORS_DIR}/ffmpeg-Target-release.cmake"
)

if(VOICE_AV_USE_RELEASE_CONAN_DEPS
    AND EXISTS "${VOICE_AV_FFMPEG_RELEASE_CONFIG}"
    AND NOT EXISTS "${VOICE_AV_FFMPEG_DEBUG_CONFIG}"
)
    set(CMAKE_MAP_IMPORTED_CONFIG_DEBUG Release)
    set(CMAKE_MAP_IMPORTED_CONFIG_RELWITHDEBINFO Release)
    set(CMAKE_MAP_IMPORTED_CONFIG_MINSIZEREL Release)
endif()

list(PREPEND CMAKE_PREFIX_PATH
    "${CMAKE_BINARY_DIR}/generators"
    "${VOICE_AV_CONAN_GENERATORS_DIR}"
)

find_package(ffmpeg REQUIRED CONFIG)

include("${VOICE_AV_SOURCE_DIR}/cmake/VoiceAVHelpers.cmake")

voice_av_add_example_groups()
